<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_likes">Likes</string>
    <string name="description_post_reposts">Reposts</string>
    <string name="description_post_views">Views</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="edit_image">Edit Image</string>
    <string name="save_image">Save Image</string>
    <string name="edit_text">Edit text</string>
    <string name="cancel_edit">Cancel edit</string>
    <string name="add_post">Add post</string>
    <string name="chooser_share_post">Share post</string>
    <string name="play_video">Play video</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_new_post">User %1$s posted new post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
</resources>